syntax = "proto3";
option java_multiple_files = true;
package com.aihangxunxi.aitalk.im.protocol.buffers;

//***********************认证相关相关***********************//

// 认证连接
message AuthRequest {
  string token = 1; // 用户token
  string device_code = 2; //设备号
  string device_idiom = 3;//设备类型:Desktop、Phone、Tablet、Unknown
  string device_platform = 4;//客户端平台:Android、iOS、Unknown
}

// 认证响应
message AuthAck {
  bool result = 1; // 认证是否成功
  string session_id = 2;//一定要包含sessionId，以便连接后面心跳使用
  string info = 3;// 用户信息及sessionId，
}